src/app/sensify-components/sensify-start/sensify-start.scss
sensify-page-start {

    .grid{
        height:100%;
    }

    //background Image
    .start{
        background: no-repeat 0 0 fixed;
        background-size: cover;
        color: rgb(255, 255, 255);
    }

    //First Row
    #titleRow{
        height:100px;
        overflow:hidden;
        white-space: nowrap; 
        text-overflow: ellipsis;
        min-height: 70px;
    }

    // Titel
    #senseBoxTitle{
        width: 70%;
        height:100%;
        font-size:40px;
        color: rgb(255, 255, 255);
        overflow:auto;
        text-align: center;
        white-space: nowrap; 
    }

    // Date
    #date{
        font-size:20px;
        color: rgb(255, 255, 255);
        margin-top:30px;
    }

    //Second Row
    #currentSensorRow{
        overflow:auto;
        white-space: nowrap; 
        text-overflow: ellipsis;
        height: 70%;
        min-height: 200px;
    }

    #currentSensorCol{
        text-align:left;
    }

    #btn{
        height:50%;
        width:100%;
        background-color:transparent;
        text-align: left;
        color:white;
        background:rgba(0, 0, 0, 0.2);
        text-transform: capitalize;
        overflow:auto;
        white-space: nowrap; 
        text-overflow: ellipsis;
        
        min-height: 120px;
    }

    #curName{
        font-size: 20px;
        margin: 10px;
    }

    #curValue{
        font-size: 40px;
        display:inline;
        font-size: 5.5vw;
        margin: 10px;
    }

    #curUnit{
        font-size: 25px;
        display:inline;
    }

    #sunIndicator{
        text-align: center;
        align-content: center;
    }

    #sunIcon{
        margin-bottom: -10px;
        height: 45px;
    }










    //Headings Row
    #headingsRow{
        background:rgba(0, 0, 0, 0.5);
        margin-top:-20px;
        margin-bottom: 0px;
        min-height: 50px;
        
        border-bottom: 3px solid #aaa;
        border-bottom-width: 80%;
        border-bottom-left-radius: 10%;
        border-bottom-right-radius: 10%;
    }

    #headingCol{
        top:-10px;
        text-align: left;
        overflow:auto;
    }

    #headingSensor{
        margin-left: 10px;        
        white-space: nowrap; 
    }

    #headingValue{
        margin-left: 10px;
        white-space: nowrap; 
    }

    #headingUnit{
        margin-left: 10px;
        white-space: nowrap; 
    }


    //Third Row
    #dataRow{
        background:rgba(0, 0, 0, 0.5);
        height:52%;
        overflow: auto;
        margin-top: 0px;
    }

    #sensorCol{
        top:-10px;
        font-size: 20px;
        line-height: 2;
        text-align: left;
    }

    #valueCol{
        top:-10px;
        font-size: 20px;
        line-height: 2;
        margin-left:-30px;
    }

    #unitCol{
        top:-10px;
        font-size: 20px;
        line-height: 2;
        text-align: left;
    }








    #sensors{
        border-right: 1px solid #aaa;
        margin-left:-30px;
    }


    #element{
        overflow:auto;
        text-align: left;
        white-space: nowrap; 
        text-overflow: ellipsis;
    }
}

